# cs2-webscraper-service

./: Dockerfile  README.md  conda_dependencies.txt  docker-compose.yml  environment.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3bfc6a7f5633_add_tables_back.py  818cdd04d0ef_change_teams_primary_key_to_uuid_and_.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATABASE.md
src/cs2_webscraper_service/cs2_webscraper_django_app/: debug_hltv_matches.html  debug_hltv_tournament.html  experiment.ipynb  hltv_matches.html  hltv_result.html  hltv_results.html  hltv_team_rankings.html  manage.py
src/cs2_webscraper_service/cs2_webscraper_django_app/core/: apps.py  models.py
src/cs2_webscraper_service/cs2_webscraper_django_app/cs2_webscraper_django_app/: asgi.py  settings.py  urls.py  wsgi.py
src/cs2_webscraper_service/cs2_webscraper_django_app/modules/: teams_service.py
src/cs2_webscraper_service/cs2_webscraper_django_app/scrapers/: base.py
src/cs2_webscraper_service/scrapers/pandascore/: client.py
src/webscraper/: __init__.py  main.py
src/webscraper/cli/: __init__.py  commands.py
src/webscraper/core/: __init__.py  config.py  container.py  interfaces.py
src/webscraper/database/: __init__.py  base.py  models.py  session.py  session_factory.py
src/webscraper/database/repositories/: __init__.py  match_repository.py  player_repository.py  team_repository.py
src/webscraper/modules/: __init__.py  teams_service.py
src/webscraper/scrapers/: __init__.py  base.py
src/webscraper/scrapers/hltv/: __init__.py  client.py  scraper.py  transformers.py
src/webscraper/scrapers/pandascore/: __init__.py  client.py  config.py  scraper.py  transformers.py  (+1 more)
src/webscraper/services/: __init__.py  data_service.py  scraping_service.py
src/webscraper/utils/: __init__.py  exceptions.py  logger.py  rate_limiter.py
tests/: __init__.py
tests/integration/: __init__.py
tests/integration/test_database/: __init__.py  test_repositories.py  test_scrapers.py
tests/unit/: __init__.py
tests/unit/test_repositories/: __init__.py  test_match_repository.py  test_player_repository.py  test_team_repository.py
tests/unit/test_scrapers/: __init__.py  test_hltv_scraper.py  test_pandascore_scraper.py
tests/unit/test_services/: __init__.py  test_data_service.py  test_scraping_service.py
(+7 files in other folders)
