[project]
name = "cs2-webscraper-service"
version = "0.1.0"
description = ""
authors = [
    {name = "MarwanBit",email = "38559602+MarwanBit@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.3.1,<9.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "django (>=6.0.1,<7.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "cs2_webscraper_service", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
