[project]
name = "cs2-webscraper-service"
version = "0.1.0"
description = ""
authors = [
    {name = "MarwanBit",email = "38559602+MarwanBit@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "psycopg (>=3.3.2,<4.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "playwright (>=1.57.0,<2.0.0)",
    "datetime (>=6.0,<7.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-playwright (>=0.7.2,<0.8.0)",
    "playwright-stealth (>=2.0.1,<3.0.0)",
    "asyncio (>=4.0.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "cs2_webscraper_service", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
